# Nautical-UI

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
assets/themes/: night.json
docs/: PHASE0.md  PHASE2_PHASE3.md  PHASE4.md  PHASES.md
packaging/linux/: README.md
packaging/windows/: README.md
src/app/: AppConfig.h  AppModule.h  MainWindow.cpp  MainWindow.h  main.cpp
src/graphics/: MarineIcons.cpp  MarineIcons.h  Theme.cpp  Theme.h
src/modules/ais/: AisModule.cpp  AisModule.h
src/modules/alarms/: AlarmModule.cpp  AlarmModule.h
src/modules/anchor/: AnchorModule.cpp  AnchorModule.h
src/modules/bilge/: BilgeModule.cpp  BilgeModule.h
src/modules/home/: HomeModule.cpp  HomeModule.h
src/modules/nav/: NavModule.cpp  NavModule.h
src/modules/sail/: SailModule.cpp  SailModule.h
src/modules/systems/: SystemsModule.cpp  SystemsModule.h
src/modules/windlass/: WindlassModule.cpp  WindlassModule.h
src/nmea/: Nmea0183.cpp  Nmea0183.h  NmeaTcpClient.cpp  NmeaTcpClient.h
src/shell/: BottomNavBar.cpp  BottomNavBar.h  CenterViewport.cpp  CenterViewport.h  HelmShell.cpp  HelmShell.h  SensorTile.cpp  SensorTile.h  TopStatusBar.cpp  TopStatusBar.h
src/telemetry/: DummyTelemetrySource.cpp  DummyTelemetrySource.h  Format.cpp  Format.h  TelemetryStore.cpp  TelemetryStore.h  TelemetryTypes.h
tests/: nmea_parser_test.cpp  nmea_tokenizer_test.cpp  telemetry_store_test.cpp
